quorum/test/tests/TypeChecker/Fail/ExpAssignTextObjBoolObj.quorum
Boolean b
b:setValue(true)
Text t = cast(Text, b)